"Removed unnecessary blank lines and corrected whitespace in rafting.css"

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -63,13 +63,11 @@ nav a {
 
 nav a:link, nav a:visited {
     color: var(--nav-link-color);
-    
 }
 
 nav a:hover {
     color: var(--nav-hover-link-color);
     background-color: var(--nav-hover-background-color);
-
 }
 
 .hero {
@@ -91,7 +89,6 @@ nav a:hover {
     display: block;
     width: 100%;
     height: auto;
-    background-color: ; /* Light blue color close to the blue of water */
     border-radius: 10px;
 }
 
@@ -105,7 +102,7 @@ nav a:hover {
     margin: 10px;
     border-radius: 5px;
     font-size: 40px;
-    background-color:  #90e1ef98; /* Ensure no background color */
+    background-color: #90e1ef98; /* Ensure no background color */
     white-space: nowrap; /* Prevent text from wrapping */
 }
 
@@ -127,7 +124,7 @@ nav a:hover {
     top: 50%; /* Position the article at the top */
     left: 50%;
     transform: translate(-50%, -50%); /* Center the article horizontally and vertically */
-    background-color:  #90e1ef98;
+    background-color: #90e1ef98;
     padding: 20px;
     max-width: 60%;
     height: 200px; /* Set a fixed height for the article */
